Project/NextCloud/mariadb-svc-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-test
  namespace: nextcloud
spec:
  selector:
    app: mariadb
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 31306
