Project/NextCloud/mariadb-svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: mariadb-service 
  namespace: nextcloud 
spec: 
  selector: 
    app: mariadb 
  ports: 
    - port: 3306
      targetPort: 3306
