Project/NextCloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.vnpt.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nextcloud-service
                port:
                  number: 80
            path: /
